// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for June's group destination action: all fields 1`] = `
Object {
  "anonymousId": "N1BSeZxxSGh^3D$",
  "groupId": "N1BSeZxxSGh^3D$",
  "messageId": "N1BSeZxxSGh^3D$",
  "timestamp": Any<String>,
  "traits": Object {
    "testType": "N1BSeZxxSGh^3D$",
  },
  "userId": "N1BSeZxxSGh^3D$",
}
`;

exports[`Testing snapshot for June's group destination action: required fields 1`] = `
Object {
  "groupId": "N1BSeZxxSGh^3D$",
  "messageId": "N1BSeZxxSGh^3D$",
  "timestamp": Any<String>,
}
`;
